tests/models/enum/named/string/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        String
    ),
}
fn main() {}
